# aither

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  impl_trait_nested  impl_trait_struct3  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml  test.yml
acp/: Cargo.toml
acp/src/: adapter.rs  lib.rs  server.rs  session.rs
acp/src/protocol/: error.rs  mod.rs  types.rs
agent/: Cargo.toml
agent/src/: agent.rs  ask_user.rs  bash_agent.rs  builder.rs  coder.rs  compression.rs  config.rs  context.rs  error.rs  event.rs  execute.rs  fs_util.rs  hook.rs  lib.rs  memory.rs  model_group.rs  plan.rs  research.rs  search.rs  stream.rs  sub_agent.rs  subagent_file.rs  todo.rs  tool_request.rs  tools.rs  transcript.rs  working_docs.rs  workspace_request.rs
agent/src/prompts/: coder.txt  compact_handoff.txt  compression_system.txt  compression_urls.txt  compression_user.txt  knowledge_and_time.txt  permissions.txt  system.md  task.md  todo.md  tool_error_reminder.txt
agent/src/prompts/subagents/: explore.md  plan.md  research.md
agent/src/specialized/: coder.rs  mod.rs  subagent.rs  task.rs
agent/src/texts/: request_workspace_default_reason.txt  tool_request_cancelled.txt  tool_request_unavailable.txt
agent/templates/: system.txt
attachments/: Cargo.toml
attachments/src/: lib.rs
claude/: Cargo.toml
claude/src/: client.rs  constant.rs  error.rs  lib.rs  provider.rs  request.rs  response.rs
cli/: Cargo.toml
cli/src/: cloud.rs  hook.rs  lib.rs  main.rs  provider.rs
cli/src/prompts/: explore.md  plan.md  system.md
cloud/: Cargo.toml  README.md
cloud/src/: lib.rs
copilot/: Cargo.toml
copilot/src/: auth.rs  client.rs  constant.rs  error.rs  lib.rs  provider.rs
core/: Cargo.toml
core/src/: audio.rs  embedding.rs  image.rs  lib.rs  moderation.rs
core/src/llm/: assistant.rs  event.rs  message.rs  mod.rs  model.rs  provider.rs  researcher.rs  response.rs  tool.rs
core/src/llm/prompts/: mod.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: assistant.rs  chatbot_gemini.rs  chatbot_openrouter.rs  gemini_debug.rs  mem0_gemini.rs  tool_macro.rs
gemini/: Cargo.toml
gemini/examples/: code_execution.rs  google_search.rs
gemini/src/: attachments.rs  audio.rs  client.rs  config.rs  embedding.rs  error.rs  files.rs  image.rs  lib.rs  llm.rs  moderation.rs  provider.rs  types.rs
gemini/tests/: it.rs
llama/: Cargo.toml
llama/src/: client.rs  error.rs  lib.rs  provider.rs
mcp/: Cargo.toml
mcp/examples/: context7.rs
mcp/src/: lib.rs
mcp/src/client/: client.rs  mod.rs  toolset.rs
mcp/src/protocol/: error.rs  message.rs  mod.rs  types.rs
mcp/src/server/: mod.rs  server.rs
mcp/src/transport/: child.rs  http.rs  mod.rs  stdio.rs  traits.rs
mem0/: Cargo.toml
mem0/prompts/: extractor.txt  manager.txt
mem0/src/: error.rs  lib.rs  llm.rs  store.rs
mistral/: Cargo.toml
mistral/src/: error.rs  lib.rs  provider.rs
models/: Cargo.toml  build.rs  models.toml  models_embedding.toml  models_image.toml  models_llm.toml  models_reranker.toml
models/src/: lib.rs
openai/: Cargo.toml
openai/src/: attachments.rs  audio.rs  client.rs  constant.rs  embedding.rs  error.rs  files.rs  image.rs  lib.rs  mime.rs  moderation.rs  provider.rs  request.rs  response.rs
ort/: Cargo.toml
ort/src/: error.rs  lib.rs  pooling.rs
outputs/slide/: SKILL.md
outputs/slide/assets/template/: package.json  slides.md
outputs/slide/references/: layouts.md  subagent_art_direction.md  subagent_topic_research.md  subagent_visual_verification.md  syntax.md  themes.md
outputs/slide/subagents/: art_direction.md  slide_creator.md
pdf_process/: Cargo.toml
pdf_process/src/: chunking.rs  error.rs  lib.rs  model.rs  ocr.rs  parser.rs  pdfium.rs  render.rs  xml.rs
rag/: Cargo.toml  README.md
rag/examples/: basic.rs
rag/src/: cleaning.rs  config.rs  dedup.rs  error.rs  indexing.rs  lib.rs  rag.rs  store.rs  tool.rs  types.rs
rag/src/chunking/: code.rs  fixed.rs  mod.rs  paragraph.rs  sentence.rs
rag/src/index/: hnsw.rs  mod.rs
rag/src/persistence/: lancedb_backend.rs  mod.rs  redb_backend.rs  rkyv_backend.rs
sandbox/: Cargo.toml
sandbox/src/: bash.rs  bash_prompt.md  bollard_exec.rs  command.rs  container.rs  job_registry.rs  lib.rs  naming.rs  output.rs  output_compress.rs  permission.rs  shell_session.rs
sandbox/src/builtin/: ask.rs  mod.rs  reload.rs  stop.rs  tasks.rs  terminal.rs
skills/: Cargo.toml
skills/examples/: test_parse.rs
skills/src/: error.rs  lib.rs  loader.rs  matcher.rs  registry.rs  skill.rs
src/: audio.rs  image.rs  lib.rs  moderation.rs
src/llm/: message.rs  mod.rs  model.rs  provider.rs  tool.rs
tools/command/: Cargo.toml
tools/command/src/: lib.rs  prompt.md
tools/fs/: Cargo.toml
tools/fs/src/: lib.rs  prompt.md
tools/webfetch/: Cargo.toml
tools/webfetch/examples/: fetch.rs  headless.rs
tools/webfetch/src/: lib.rs  prompt.md
tools/websearch/: Cargo.toml
tools/websearch/src/: lib.rs  prompt.md
tools/websearch/src/providers/: brave.rs  duckduckgo.rs  exa.rs  google.rs  mod.rs  searxng.rs  serper.rs  tavily.rs
