[workspace]
resolver = "2"
members = [
    "claude",
    "derive",
    "openai",
    "core",
    "gemini",
    "ort",
    "agent",
    "rag",
    "mem0",
    "skills",
    "models",
    "tools/websearch",
    "tools/webfetch",
    "tools/fs",
    "tools/command",
    "mcp",
    "cli",
    "sandbox",
]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
license = "MIT"
repository = "https://github.com/lexoliu/aither"
rust-version = "1.87"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions = { level = "allow", priority = 1}

[workspace.dependencies]
tracing = "0.1.41"
aither-core = { path = "./core"}
aither-derive = { path = "./derive", version = "0.1.0"}
aither-ort = { path = "./ort" }
zenwave = { path = "../zenwave" }
aither-skills = { path = "./skills" }
aither-websearch = { path = "./tools/websearch" }
aither-webfetch = { path = "./tools/webfetch" }
aither-fs = { path = "./tools/fs" }
aither-command = { path = "./tools/command" }
aither-mcp = { path = "./mcp" }
aither-sandbox = { path = "./sandbox" }
aither-agent = { path = "./agent" }
aither-openai = { path = "./openai" }
aither-claude = { path = "./claude" }
aither-gemini = { path = "./gemini" }
aither-models = { path = "./models" }

[dependencies]
aither-core.workspace = true
aither-derive = { workspace = true, optional = true}
anyhow = { version = "1.0", default-features = false }
futures-core = { version = "0.3.31", default-features = false}
futures-lite = { version = "2.6"}
pin-project-lite = "0.2.16"
schemars = { version = "1.0", default-features = false}
serde = { version = "1.0", default-features = false}
serde_json = { version = "1.0", default-features = false }
url = { version = "2.5", default-features = false }

# Provider integrations
aither-openai = { path = "./openai", optional = true }
aither-claude = { path = "./claude", optional = true }
aither-gemini = { path = "./gemini", optional = true }
aither-ort = { workspace = true, optional = true }

# High-level features
aither-agent = { path = "./agent", optional = true }
aither-rag = { path = "./rag", optional = true }
aither-mem0 = { path = "./mem0", optional = true }
aither-skills = { workspace = true, optional = true }

# Tools
aither-websearch = { workspace = true, optional = true }
aither-webfetch = { workspace = true, optional = true }
aither-fs = { workspace = true, optional = true }
aither-command = { workspace = true, optional = true }

# MCP
aither-mcp = { workspace = true, optional = true }


[dev-dependencies]
aither-openai = { path = "./openai" }
aither-gemini = { path = "./gemini" }
aither-mem0 = { path = "./mem0" }
aither-webfetch = { path = "./tools/webfetch" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
aither-rag = { path = "./rag" }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
schemars = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
futures-lite = { version = "2.6"}
crossterm = "0.28"

[package]
name = "aither"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Providing unified trait abstractions for AI models"
documentation = "https://docs.rs/aither"
keywords = ["ai", "llm", "embedding", "image-generation", "no-std"]
categories = ["api-bindings", "no-std"]
readme = "./README.md"
exclude = [
    ".github/",
    ".gitignore",
    "target/",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["derive", "serde"]
serde = ["serde/derive","url/serde"]
derive = ["aither-derive"]

# Provider integrations
openai = ["aither-openai"]
claude = ["aither-claude"]
gemini = ["aither-gemini"]
ort = ["aither-ort"]

# High-level features
agent = ["aither-agent"]
rag = ["aither-rag"]
mem0 = ["aither-mem0"]
skills = ["aither-skills"]

# Tools
websearch = ["aither-websearch"]
webfetch = ["aither-webfetch"]
fs = ["aither-fs"]
command = ["aither-command"]

# MCP
mcp = ["aither-mcp"]

# Convenience feature to enable all providers
all-providers = ["openai", "claude", "gemini", "ort"]

# Convenience feature to enable all tools
all-tools = ["websearch", "webfetch", "fs", "command"]

# Convenience feature to enable everything
full = ["all-providers", "all-tools", "agent", "rag", "mem0", "skills", "mcp"]

[lints]
workspace = true
