[package]
name = "aither-agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI agent framework with planning, memory, and tool execution for aither"
readme = "../README.md"
keywords = ["ai", "agent", "llm", "planning"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
anyhow = "1.0.100"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
aither-websearch = { workspace = true, optional = true }
aither-webfetch = { workspace = true, optional = true }
aither-fs = { workspace = true, optional = true }
aither-command = { workspace = true, optional = true }
aither-mcp = { workspace = true, optional = true }
parking_lot = { version = "0.12", features = ["send_guard"], optional = true }
async-stream = "0.3.6"
futures = "0.3"
futures-core = "0.3.31"
futures-lite = "2.6"
regex = "1.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
websearch = ["dep:aither-websearch"]
webfetch = ["dep:aither-webfetch"]
filesystem = ["dep:aither-fs"]
command = ["dep:aither-command"]
mcp = ["dep:aither-mcp", "dep:parking_lot"]
full = ["websearch", "webfetch", "filesystem", "command", "mcp"]
[lints]
workspace = true
