[package]
name = "aither-agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI agent framework with planning, memory, and tool execution for aither"
readme = "../README.md"
keywords = ["ai", "agent", "llm", "planning"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
aither-sandbox.workspace = true
executor-core = "0.7"
anyhow = "1.0.100"
askama = "0.14"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["fs"] }
aither-websearch = { workspace = true, optional = true }
aither-webfetch = { workspace = true, optional = true }
aither-fs = { workspace = true, optional = true }
aither-command = { workspace = true, optional = true }
aither-mcp = { workspace = true, optional = true }
aither-skills = { workspace = true, optional = true }
parking_lot = { version = "0.12", features = ["send_guard"], optional = true }
futures = "0.3"
futures-core = "0.3.31"
futures-lite = "2.6"
async-stream = "0.3"
pin-project-lite = "0.2.16"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
websearch = ["dep:aither-websearch"]
webfetch = ["dep:aither-webfetch"]
filesystem = ["dep:aither-fs"]
command = ["dep:aither-command"]
mcp = ["dep:aither-mcp", "dep:parking_lot"]
skills = ["dep:aither-skills"]
full = ["websearch", "webfetch", "filesystem", "command", "mcp", "skills"]
[lints]
workspace = true
