[package]
name = "aither-attachments"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Attachment caching utilities for aither providers"
readme = "../README.md"
keywords = ["ai", "attachments", "files", "cache"]
categories = ["api-bindings"]

[dependencies]
async-fs = "2"
futures-lite = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"

[lints]
workspace = true
