[package]
name = "aither-claude"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Claude provider integration for aither"
readme = "../README.md"
keywords = ["ai", "llm", "claude", "anthropic"]
categories = ["api-bindings"]

[dependencies]

[lints]
workspace = true
