[package]
name = "aither-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Interactive CLI for testing aither agents"
readme = "../README.md"
keywords = ["ai", "agent", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "aither"
path = "src/main.rs"

[dependencies]
aither-agent = { workspace = true, features = ["full"] }
aither-gemini = { workspace = true }
aither-mcp = { workspace = true }
aither-core.workspace = true
anyhow = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints]
workspace = true
