[package]
name = "aither-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Interactive CLI for testing aither agents"
readme = "../README.md"
keywords = ["ai", "agent", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "aither"
path = "src/main.rs"

[dependencies]
aither-acp.workspace = true
aither-agent = { workspace = true, features = ["full"] }
aither-cloud.workspace = true
aither-core.workspace = true
aither-mcp.workspace = true
anyhow = "1.0"
async-lock = "3"
async-stream = "0.3"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
crossterm = "0.28"
futures-core = "0.3"
futures-lite = "2.6"
pin-project-lite = "0.2"
thiserror = "2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
executor-core = { version = "0.7", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints]
workspace = true
