[package]
name = "aither-copilot"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GitHub Copilot provider integration for aither"
readme = "../README.md"
keywords = ["ai", "llm", "github", "copilot"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
aither-models.workspace = true
async-io = "2"
async-stream = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-lite = "2.6"
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
zenwave.workspace = true

[lints]
workspace = true
