[package]
name = "aither-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core trait abstractions for aither"
readme = "../README.md"
keywords = ["ai", "llm", "traits", "no-std"]
categories = ["api-bindings", "no-std"]

[dependencies]
aither-derive = { workspace = true, optional = true}
anyhow = { version = "1.0", default-features = false }
futures-core = { version = "0.3.31", default-features = false}
futures-lite = { version = "2.6"}
pin-project-lite = "0.2.16"
schemars = { version = "1.0", default-features = false}
serde = { version = "1.0", default-features = false}
serde_json = { version = "1.0", default-features = false }
url = { version = "2.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
schemars = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
futures-lite = { version = "2.6"}

[features]
default = ["derive", "serde"]
serde = ["serde/derive","url/serde"]
derive = ["aither-derive"]

[lints]
workspace = true
