[package]
name = "aither-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for aither - convert functions into AI tools"
documentation = "https://docs.rs/aither-derive"
keywords = ["ai", "llm", "procedural-macros", "tools"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
convert_case = "0.8.0"

[lints]
workspace = true
