[package]
name = "aither-gemini"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Google Gemini provider integration for aither"
readme = "../README.md"
keywords = ["ai", "llm", "gemini", "google"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
async-stream = "0.3.6"
futures-core = { version = "0.3", default-features = false }
futures-lite = "2.6"
base64 = "0.21"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zenwave.workspace = true

[lints]
workspace = true
