[package]
name = "aither-gemini"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Google Gemini provider integration for aither"
readme = "../README.md"
keywords = ["ai", "llm", "gemini", "google"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
aither-models.workspace = true
aither-attachments.workspace = true
async-stream = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-lite = "2.6"
base64 = "0.22"
mime_guess = "2"
schemars = "1.0"
async-io = "2.6.0"
async-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
zenwave.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[[example]]
name = "google_search"
path = "examples/google_search.rs"

[[example]]
name = "code_execution"
path = "examples/code_execution.rs"

[lints]
workspace = true
