[package]
name = "aither-llama"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local llama.cpp integration for aither"
categories = ["api-bindings", "science"]
keywords = ["llm", "llama", "gguf", "inference"]

[dependencies]
aither-core.workspace = true
async-channel = "2.3"
llama_cpp = { version = "0.3", default-features = true }
rand = { version = "0.8", features = ["std"] }
thiserror = "1.0"

[features]
default = []

[lints]
workspace = true
