[package]
name = "aither-mcp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) client and server for aither"

[dependencies]
aither-core = { path = "../core" }
zenwave.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
futures-lite = "2"
futures-core = "0.3"
thiserror = "2"
async-io = "2"
async-process = "2"
async-lock = "3"
async-channel = "2"
tracing = "0.1"

[dev-dependencies]
futures-lite = "2"

[lints]
workspace = true
