[package]
name = "aither-mem0"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mem0-style long term memory orchestrator for Aither agents"
readme = "../README.md"
keywords = ["memory", "agent", "llm", "rag", "long-term-memory"]
categories = ["api-bindings", "ai"]

[dependencies]
aither-core = { path = "../core" }
anyhow = { version = "1.0", features = ["std"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing.workspace = true
async-lock = "3.4.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
aither-openai = { path = "../openai" }
aither-gemini = { path = "../gemini" }
