[package]
name = "aither-openai"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI provider integration for aither"
readme = "../README.md"
keywords = ["ai", "llm", "openai", "chatgpt"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
aither-models.workspace = true
aither-attachments.workspace = true
async-io = "2"
async-stream = "0.3"
async-fs = "2"
http = "1"
futures-core = { version = "0.3", default-features = false }
futures-lite = "2.6"
base64 = "0.22"
mime_guess = "2"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
url = "2"
zenwave.workspace = true

[lints]
workspace = true
