[package]
name = "aither-pdf-process"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Token-efficient PDF to XML conversion for LLM context engineering"
keywords = ["pdf", "xml", "llm", "context", "chunking"]
categories = ["api-bindings", "text-processing"]

[dependencies]
lopdf = "0.35"
thiserror = "2.0"
oar-ocr = { version = "0.6.1", optional = true, default-features = false }
pdfium-render = { version = "0.8.37", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
ocr = ["dep:oar-ocr", "dep:pdfium-render", "dep:image"]
render = []

[lints]
workspace = true
