[package]
name = "aither-pdf-process"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Token-efficient PDF to XML conversion for LLM context engineering"
keywords = ["pdf", "xml", "llm", "context", "chunking"]
categories = ["api-bindings", "text-processing"]

[dependencies]
lopdf = "0.35"
thiserror = "2.0"
async-fs = "2"
blocking = "1.6"
oar-ocr = { version = "0.6.1", optional = true, default-features = false }
pdfium-render = "0.8.37"
image = "0.25"

[features]
default = []
ocr = ["dep:oar-ocr"]
render = []

[dev-dependencies]
futures-lite = "2.6"

[lints]
workspace = true
