[package]
name = "aither-rag"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Production-ready RAG with HNSW indexing, chunking, and persistence"
keywords = ["rag", "embedding", "vector-database", "search", "hnsw"]
categories = ["api-bindings", "database"]

[dependencies]
aither-core = { path = "../core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.11"
serde_json = "1.0"

# Chunking
unicode-segmentation = "1.12"
tree-sitter = "0.22.5"
tree-sitter-rust = "0.21.2"

# HNSW Index
instant-distance = "0.6"
parking_lot = "0.12"
ordered-float = "4.6"

# Persistence
rkyv = { version = "0.8", features = ["bytecheck"] }
redb = "2.4"
lancedb = { version = "0.23.1", default-features = false, optional = true }
arrow-array = { version = "56.2", optional = true }
arrow-schema = { version = "56.2", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

# Deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = []
lancedb-persistence = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3.10"

[lints]
workspace = true
