[package]
name = "aither-sandbox"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bash-based tool execution with leash sandboxing"

[dependencies]
aither-core.workspace = true

# Sandboxing
leash = { path = "../../native-sandbox" }

# Executor for tokio integration
executor-core = { version = "0.7", features = ["tokio"] }

# Async runtime
async-fs = "2"
async-process = "2"
async-io = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

# Utilities
url = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
futures-lite = "2.6"
async-channel = "2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
